<resources>
    <string name="app_name">GRRNble</string>

    <!-- MainActivity -->
    <!-- Toast -->
    <string name="ble_is_not_supported">BLE is not supported</string>
    <string name="bluetooth_is_not_supported">Bluetooth is not supported.</string>
    <string name="bluetooth_is_not_working">Bluetooth is not working.</string>
    <string name="device_is_not_found">Device is not found.</string>
    <string name="connection_failed">Connection failed.</string>
    <string name="connection_lost">Connection is lost.</string>

    <!-- Menu -->
    <string name="search">Search</string>

    <!-- Label -->
    <string name="device_name">Device Name : </string>
    <string name="device_address">Device Address : </string>
    <string name="battery_level">Battery Level: </string>
    <string name="temperature">Temperature: </string>
    <string name="connect">Connect</string>
    <string name="disconnect">Disconnect</string>
    <string name="chara1">Battery Level : </string>
    <string name="chara2">Private Service : </string>
    <string name="hello">Hello</string>
    <string name="world">World</string>

    <!-- Alert dialog -->
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="notification_listener_service">Notification Service</string>
    <string name="notification_listener_service_explanation">Please turn the notification listener service on.</string>

    <!-- Menu -->
    <string name="debug">Debug</string>
    <string name="time_sync">Time Sync</string>

    <!-- Notification Listener Service -->
    <string name="notification_content_title">GRRNble Service</string>
    <string name="notification_content_text">GRRNbleはバックグラウンドで実行しています。</string>


</resources>